# seedlink_raw_plugin

./: LICENSE  README.md  raw_server.py
seedlink/plugins/raw_plugin/: CMakeLists.txt  raw_plugin.cc
seedlink/plugins/raw_plugin/descriptions/: raw_plugin.xml
seedlink/templates/raw/: seedlink_plugin.tpl  setup.py
