SET(RAWPLUGIN_SOURCES
	raw_plugin.cc
)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../../libs/plugin)
INCLUDE_DIRECTORIES(${LIBMSEED_INCLUDE_DIR})

SET(OPTIONS "-DSYSLOG_FACILITY=LOG_LOCAL0")

ADD_DEFINITIONS(${OPTIONS})

ADD_EXECUTABLE(raw_plugin ${RAWPLUGIN_SOURCES})

TARGET_LINK_LIBRARIES(
	raw_plugin
	slplugin
    ${LIBMSEED_LIBRARY}
)

INSTALL(TARGETS raw_plugin RUNTIME DESTINATION ${SEEDLINK_PLUGIN_OUTPUT_DIR})

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
